# competition_ws

./: .gitignore  ANALYSIS_AND_FIX.md  COLOR_DETECTION_FEATURES.md  COMMON_ROI_UPDATE.md  JERK_FIX.md  LESSON4_PARAMETERS_APPLIED.md  LINE_FOLLOWER_V2_IMPROVEMENTS.md  LINE_FOLLOWER_V3_HEAD_STABILIZATION.md  MOTION_SMOOTHING_ANTI_JERK.md  ROTATE_IN_PLACE_SEARCH.md  SPAWN_CONFIGURATION_FIX.md  SPEED_REDUCTION_FIX.md  STABILITY_FIXES.md  STAGED_STARTUP_FIX.md  TURN_RECOVERY_IMPROVEMENTS.md  V1_VS_V2_COMPARISON.md  commands\
Reference/: main.py
Reference/Lesson 4 Gazebo Simulation & Motion Planning/: input.md
Reference/ainex_app/launch/: start.launch
Reference/ainex_bringup/launch/: base.launch  bringup.launch
Reference/ainex_calibration/launch/: camera_calibration.launch
Reference/ainex_interfaces/: CMakeLists.txt
Reference/ainex_peripherals/launch/: image_calib.launch  imu.launch
Reference/ainex_peripherals/scripts/: 99-usb-cam.rules  joystick_control.py
src/ainex_line_follower/: BUILD_SUCCESS.txt  CAMERA_FIX_README.txt  CMakeLists.txt  COMPLETE_FIX_SUMMARY.md  CV_BRIDGE_FIX.md  CV_BRIDGE_FIX_SUMMARY.txt  FIXES.md  FIX_SUMMARY.md  QUICK_REFERENCE.sh  README.md  SPAWN_POSITION_GUIDE.md  SUMMARY.md  USAGE.md  build_and_test.sh  check_fixes.sh  package.xml  setup.py  setup.sh  test_launch.sh
src/ainex_line_follower/config/: line_follower_params.yaml
src/ainex_line_follower/launch/: line_follower_only.launch  line_follower_simulation.launch  test_line_follower.launch
src/ainex_line_follower/scripts/: line_follower_node.py  line_follower_node_v2.py
src/gazebo_line_world/: CMakeLists.txt  package.xml
src/gazebo_line_world/launch/: world_launch.py
src/gazebo_line_world/worlds/: line_follower.world
src/gazebo_world/: CMakeLists.txt  package.xml
src/gazebo_world/launch/: spawn_robot_line_follower.launch  world.launch  world_launch.py
src/gazebo_world/models/assignment1/: model.config  (+1 more)
src/gazebo_world/worlds/: assignment1.world  assignment2.world  assignment3.world  line_follower.world  world.world
src/line_follower_test/: CMakeLists.txt  CRITICAL_FIX_STEP_COUNTING.md  INITIALIZATION_SEQUENCE.md  LESSON4_TUTORIAL_PARAMETERS.md  README.md  README_TEST.md  RECTANGLE_WALKER_IMPROVEMENTS.md  package.xml  setup.py
src/line_follower_test/launch/: line_follower_simulation.launch  rectangle_walker.launch  test_line_follower.launch
src/line_follower_test/scripts/: delayed_start.sh  line_follower_node.py  line_follower_node_v2.py  line_follower_node_v3.py  rectangle_walker_node.py  simple_camera_publisher.py
src/line_follower_test/src/line_follower_test/: __init__.py
(+37 files in other folders)
